New notebook on loading Scibert RE model, with required py files included.

--- a/Justin_working_file/ConNER_version2.ipynb
+++ b/Justin_working_file/ConNER_version2.ipynb
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ca61a123",
+   "id": "b93fef46",
    "metadata": {
     "scrolled": true
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ac67e13",
+   "id": "383b2e84",
    "metadata": {},
    "source": [
     "## 3. Loading Data\n",
@@ -991,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f00dfbed",
+   "id": "2d25b8d8",
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "89c3908d",
+   "id": "87280366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1200,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "6113d1b6",
+   "id": "378d607e",
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b135b93a",
+   "id": "8e06e318",
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "f0d1dfd1",
+   "id": "d06487ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1540,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "e74dd686",
+   "id": "95e8b6e0",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "98e8d06a",
+   "id": "2b448063",
    "metadata": {
     "scrolled": true
    },
@@ -1651,7 +1651,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "014d66fe",
+   "id": "e90ae411",
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d934fce5",
+   "id": "e7f512f7",
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "1a2be916",
+   "id": "38f5b93a",
    "metadata": {},
    "outputs": [
     {
@@ -1862,11 +1862,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec8ef95a",
+   "execution_count": 68,
+   "id": "417e7198",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['O', 'B-Chemical', 'B-Disease', 'I-Chemical', 'I-Disease']"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
   }
  ],
  "metadata": {
