add neo4j starter code

--- a/database/neo4j/sample/sample_neo4j_graph.ipynb
+++ b/database/neo4j/sample/sample_neo4j_graph.ipynb
@@ -817,11 +817,6 @@
     "def create_chemical_disease_graph_from_flat_df(df, chemical_column, disease_column):\n",
     "    \"\"\"\n",
     "    Create relationships between chemicals and diseases from a flat dataframe with no lists.\n",
-    "    \n",
-    "    Args:\n",
-    "    df: DataFrame containing the chemical-disease data.\n",
-    "    chemical_column: The name of the column containing chemicals.\n",
-    "    disease_column: The name of the column containing diseases.\n",
     "    \"\"\"\n",
     "    for index, row in df.iterrows():\n",
     "        chemical = row[chemical_column]\n",
@@ -844,6 +839,295 @@
    "outputs": [],
    "source": [
     "create_chemical_disease_graph_from_flat_df(df_train_nodes, chemical_column, disease_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "  Nodes:\n",
+      "-------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node_name</th>\n",
+       "      <th>labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1,1-dichloro-2,2,2-trifluoroethane</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1,2-dimethylhydrazine</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1-chloro-1,2,2,2-tetrafluoroethane</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2-acetylaminofluorene</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2-chloroprocaine-ce</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>882</th>\n",
+       "      <td>white matter edema</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>883</th>\n",
+       "      <td>withdrawal symptoms</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>884</th>\n",
+       "      <td>ximelagatran</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>885</th>\n",
+       "      <td>zidovudine</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>zonisamide</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>887 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              node_name      labels\n",
+       "0    1,1-dichloro-2,2,2-trifluoroethane  [Chemical]\n",
+       "1                 1,2-dimethylhydrazine  [Chemical]\n",
+       "2    1-chloro-1,2,2,2-tetrafluoroethane  [Chemical]\n",
+       "3                 2-acetylaminofluorene  [Chemical]\n",
+       "4                   2-chloroprocaine-ce  [Chemical]\n",
+       "..                                  ...         ...\n",
+       "882                  white matter edema   [Disease]\n",
+       "883                 withdrawal symptoms   [Disease]\n",
+       "884                        ximelagatran  [Chemical]\n",
+       "885                          zidovudine  [Chemical]\n",
+       "886                          zonisamide  [Chemical]\n",
+       "\n",
+       "[887 rows x 2 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-------------------------\n",
+      "  Relationships:\n",
+      "-------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>node_name_1</th>\n",
+       "      <th>node_1_labels</th>\n",
+       "      <th>relationship_type</th>\n",
+       "      <th>node_name_2</th>\n",
+       "      <th>node_2_labels</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1,1-dichloro-2,2,2-trifluoroethane</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>liver disease</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1,2-dimethylhydrazine</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>initiation induced by carcinogens</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1-chloro-1,2,2,2-tetrafluoroethane</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>liver disease</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2-acetylaminofluorene</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>initiation induced by carcinogens</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2-chloroprocaine-ce</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>paralysis</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1030</th>\n",
+       "      <td>warfarin</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>nerve entrapment</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031</th>\n",
+       "      <td>ximelagatran</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>abnormal liver function</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>zidovudine</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>bone marrow suppression</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1033</th>\n",
+       "      <td>zidovudine</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>cardiomyopathy</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1034</th>\n",
+       "      <td>zonisamide</td>\n",
+       "      <td>[Chemical]</td>\n",
+       "      <td>RELATED_TO</td>\n",
+       "      <td>visual hallucinations</td>\n",
+       "      <td>[Disease]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1035 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             node_name_1 node_1_labels relationship_type  \\\n",
+       "0     1,1-dichloro-2,2,2-trifluoroethane    [Chemical]        RELATED_TO   \n",
+       "1                  1,2-dimethylhydrazine    [Chemical]        RELATED_TO   \n",
+       "2     1-chloro-1,2,2,2-tetrafluoroethane    [Chemical]        RELATED_TO   \n",
+       "3                  2-acetylaminofluorene    [Chemical]        RELATED_TO   \n",
+       "4                    2-chloroprocaine-ce    [Chemical]        RELATED_TO   \n",
+       "...                                  ...           ...               ...   \n",
+       "1030                            warfarin    [Chemical]        RELATED_TO   \n",
+       "1031                        ximelagatran    [Chemical]        RELATED_TO   \n",
+       "1032                          zidovudine    [Chemical]        RELATED_TO   \n",
+       "1033                          zidovudine    [Chemical]        RELATED_TO   \n",
+       "1034                          zonisamide    [Chemical]        RELATED_TO   \n",
+       "\n",
+       "                            node_name_2 node_2_labels  \n",
+       "0                         liver disease     [Disease]  \n",
+       "1     initiation induced by carcinogens     [Disease]  \n",
+       "2                         liver disease     [Disease]  \n",
+       "3     initiation induced by carcinogens     [Disease]  \n",
+       "4                             paralysis     [Disease]  \n",
+       "...                                 ...           ...  \n",
+       "1030                   nerve entrapment     [Disease]  \n",
+       "1031            abnormal liver function     [Disease]  \n",
+       "1032            bone marrow suppression     [Disease]  \n",
+       "1033                     cardiomyopathy     [Disease]  \n",
+       "1034              visual hallucinations     [Disease]  \n",
+       "\n",
+       "[1035 rows x 5 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "my_neo4j_nodes_relationships()"
    ]
   },
   {
