Evaluations of the other examples.

--- a/ongoing_experiments_and_analysis/overall_evaluation_fulldata.ipynb
+++ b/ongoing_experiments_and_analysis/overall_evaluation_fulldata.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Overall Pipeline Evaluation\n",
     "\n",
-    "This notebook evaluates the performance of the overall Chemimap pipeline by comparing the predicted positive labels and the gold labels"
+    "This notebook evaluates the performance of the overall Chemimap pipeline by comparing the predicted positive labels and the gold labels.  We cover the whole 1500 examples this time."
    ]
   },
   {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "212480db",
    "metadata": {},
    "outputs": [
@@ -63,20 +63,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gold labels loading completed.  Number of positive examples: 1066\n",
+      "Gold labels loading completed.  Number of positive examples: 3116\n",
       "\n",
       "Showing the extracted gold positive relationships for the 3rd example:\n",
-      "[{'Chemical': {'tacrolimus'}, 'Disease': {'systemic sclerosis', 'SSc'}}, {'Chemical': {'corticosteroids', 'corticosteroid'}, 'Disease': {'systemic sclerosis', 'SSc'}}, {'Chemical': {'cyclosporine'}, 'Disease': {'thrombotic microangiopathy'}}]\n"
+      "[{'Chemical': {'tacrolimus'}, 'Disease': {'systemic sclerosis', 'SSc'}}, {'Chemical': {'corticosteroid', 'corticosteroids'}, 'Disease': {'systemic sclerosis', 'SSc'}}, {'Chemical': {'cyclosporine'}, 'Disease': {'thrombotic microangiopathy'}}]\n"
      ]
     }
    ],
    "source": [
     "## Extracting the gold positive labels\n",
     "test_set_goldfile = \"./data_scibert_version/test_filter.data\"\n",
+    "train_set_goldfile = \"./data_scibert_version/train_filter.data\"\n",
+    "dev_set_goldfile = \"./data_scibert_version/dev_filter.data\"\n",
     "pos_label_count = 0\n",
     "pos_goldlabel = {}\n",
     "\n",
     "with open(test_set_goldfile, 'r') as f:\n",
+    "    lines = [l.strip().split('\\t') for l in f]\n",
+    "\n",
+    "    for l in lines:\n",
+    "        pmid = l[0]\n",
+    "\n",
+    "        for r in chunks(l[2:], 17):\n",
+    "            \n",
+    "            if r[0] == '1:CID:2':\n",
+    "                assert ((r[7] == 'Chemical') and (r[13] == 'Disease'))\n",
+    "                entry = {'Chemical': set(r[6].split('|')),\n",
+    "                         'Disease': set(r[12].split('|'))}\n",
+    "                if pmid in pos_goldlabel.keys():\n",
+    "                    pos_goldlabel[pmid].append(entry)\n",
+    "                else:\n",
+    "                    pos_goldlabel[pmid] = [entry]\n",
+    "                pos_label_count += 1\n",
+    "                \n",
+    "with open(dev_set_goldfile, 'r') as f:\n",
+    "    lines = [l.strip().split('\\t') for l in f]\n",
+    "\n",
+    "    for l in lines:\n",
+    "        pmid = l[0]\n",
+    "\n",
+    "        for r in chunks(l[2:], 17):\n",
+    "            \n",
+    "            if r[0] == '1:CID:2':\n",
+    "                assert ((r[7] == 'Chemical') and (r[13] == 'Disease'))\n",
+    "                entry = {'Chemical': set(r[6].split('|')),\n",
+    "                         'Disease': set(r[12].split('|'))}\n",
+    "                if pmid in pos_goldlabel.keys():\n",
+    "                    pos_goldlabel[pmid].append(entry)\n",
+    "                else:\n",
+    "                    pos_goldlabel[pmid] = [entry]\n",
+    "                pos_label_count += 1\n",
+    "                \n",
+    "with open(train_set_goldfile, 'r') as f:\n",
     "    lines = [l.strip().split('\\t') for l in f]\n",
     "\n",
     "    for l in lines:\n",
@@ -100,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8aa42096",
    "metadata": {},
    "outputs": [
@@ -108,7 +146,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction loading completed.  Number of positive predictions: 833\n",
+      "Prediction loading completed.  Number of positive predictions: 2530\n",
       "\n",
       "Showing the extracted predicted positive relationships for the 3rd example:\n",
       "[{'Entity1': {'scleroderma renal crisis', 'Scleroderma renal crisis'}, 'Entity2': {'tacrolimus'}}, {'Entity1': {'scleroderma renal crisis', 'Scleroderma renal crisis'}, 'Entity2': {'prednisolone'}}, {'Entity1': {'scleroderma renal crisis', 'Scleroderma renal crisis'}, 'Entity2': {'cyclosporine'}}]\n"
@@ -117,7 +155,7 @@
    ],
    "source": [
     "## Extracting the predicted positive relationships\n",
-    "test_set_predfile = \"./overall_results/test_set_results.pubtator\"\n",
+    "test_set_predfile = \"./overall_results/full_set_results.pubtator\"\n",
     "pos_pred_count = 0\n",
     "pos_pred = {}\n",
     "entities_mapping = {}\n",
@@ -163,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "727380ba",
    "metadata": {},
    "outputs": [
@@ -187,17 +225,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "61155d78",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(500, 498)"
+       "(1500, 1498)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "8254d654",
    "metadata": {},
    "outputs": [
@@ -229,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed.  Number of correct positive predictions: 332\n"
+      "Completed.  Number of correct positive predictions: 1110\n"
      ]
     }
    ],
@@ -264,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "a90b5a32",
    "metadata": {},
    "outputs": [
@@ -273,9 +311,9 @@
      "output_type": "stream",
      "text": [
       "Results:\n",
-      "- Precision: 39.86\n",
-      "- Recall: 31.14\n",
-      "- F1: 34.97\n"
+      "- Precision: 43.87\n",
+      "- Recall: 35.62\n",
+      "- F1: 39.32\n"
      ]
     }
    ],
